cmake_minimum_required(VERSION 3.8)

set(Introduction_SRC
                        Ackermann.cpp
                        BubbleSort.cpp
                        ChessboardCover.cpp
                        CountOnes.cpp
                        Fibonacci.cpp
                        GreatestCommonDivisor.cpp
                        HanoiTower.cpp
                        Main.cpp
                        MaxElement.cpp
                        Power2.cpp
                        Reverse.cpp
                        ShiftLeft.cpp
                        Sum.cpp)

add_executable(Introduction ${Introduction_SRC})